feat: add a input component, corrections in button and icon styles

--- a/packages/components/src/components/Button/styles.css
+++ b/packages/components/src/components/Button/styles.css
@@ -82,15 +82,15 @@
 }
 
 .arkyn_button.outline {
-  border-color: var(--line-color);
+  border-color: var(--secondary-300);
 }
 
 .arkyn_button.outline:hover {
-  border-color: var(--line-color-hover);
+  border-color: var(--secondary-200);
 }
 
 .arkyn_button.outline:disabled {
-  border-color: var(--line-color-hover);
+  border-color: var(--secondary-200);
 }
 
 .arkyn_button.outline.primary {
