--- a/packages/components/src/base/pallet.css
+++ b/packages/components/src/base/pallet.css
@@ -13,6 +13,21 @@
   --primary-950: #1e1b4b;
 }
 
+/* Aplication Secondary Colors */
+:root {
+  --secondary-50: #f8fafc;
+  --secondary-100: #f1f5f9;
+  --secondary-200: #e2e8f0;
+  --secondary-300: #cbd5e1;
+  --secondary-400: #94a3b8;
+  --secondary-500: #64748b;
+  --secondary-600: #475569;
+  --secondary-700: #334155;
+  --secondary-800: #1e293b;
+  --secondary-900: #0f172a;
+  --secondary-950: #020617;
+}
+
 /* Aplication Danger Colors */
 :root {
   --danger-50: #fff1f2;
@@ -56,10 +71,4 @@
   --warning-800: #9a3412;
   --warning-900: #7c2d12;
   --warning-950: #431407;
-}
-
-/* Aplication Lines */
-:root {
-  --line-color: #cbd5e1;
-  --line-color-hover: #e2e8f0;
 }
