--- a/packages/components/src/components/IconButton/styles.css
+++ b/packages/components/src/components/IconButton/styles.css
@@ -81,15 +81,15 @@
 }
 
 .arkyn_icon_button.outline {
-  border-color: var(--line-color);
+  border-color: var(--secondary-300);
 }
 
 .arkyn_icon_button.outline:hover {
-  border-color: var(--line-color-hover);
+  border-color: var(--secondary-200);
 }
 
 .arkyn_icon_button.outline:disabled {
-  border-color: var(--line-color-hover);
+  border-color: var(--secondary-200);
 }
 
 .arkyn_icon_button.outline.primary {
