--- a/packages/components/src/base/pallet.css
+++ b/packages/components/src/base/pallet.css
@@ -72,3 +72,18 @@
   --warning-900: #7c2d12;
   --warning-950: #431407;
 }
+
+/* Aplication Info Colors */
+:root {
+  --info-50: #f0f9ff;
+  --info-100: #e0f2fe;
+  --info-200: #bae6fd;
+  --info-300: #7dd3fc;
+  --info-400: #38bdf8;
+  --info-500: #0ea5e9;
+  --info-600: #0284c7;
+  --info-700: #0369a1;
+  --info-800: #075985;
+  --info-900: #0c4a6e;
+  --info-950: #082f49;
+}
