--- a/packages/components/src/components/Input/styles.css
+++ b/packages/components/src/components/Input/styles.css
@@ -153,6 +153,7 @@
   min-height: 40px;
   max-height: 40px;
   font-size: 14px;
+  line-height: 14px;
   font-weight: 400;
 }
 
@@ -172,7 +173,7 @@
 
 .arkyn_input.md .prefix,
 .arkyn_input.md .sufix {
-  height: 38px;
+  height: 40px;
   width: 44px;
   font-size: 14px;
 }
@@ -180,6 +181,7 @@
 .arkyn_input.lg input {
   min-height: 44px;
   max-height: 44px;
+  line-height: 16px;
   font-size: 16px;
   font-weight: 400;
 }
@@ -192,7 +194,7 @@
 
 .arkyn_input.lg .prefix,
 .arkyn_input.lg .sufix {
-  height: 42px;
+  height: 44px;
   width: 48px;
   font-size: 16px;
 }
