--- a/packages/components/src/components/Breadcrumb/styles.css
+++ b/packages/components/src/components/Breadcrumb/styles.css
@@ -18,12 +18,12 @@
   color: var(--secondary-900);
 }
 
-.arkyn_breadcrumb_link:hover {
+.arkyn_breadcrumb_link.inactive:hover {
   cursor: pointer;
   color: var(--secondary-900);
 }
 
-.arkyn_breadcrumb_link:first-child svg {
+.arkyn_breadcrumb_link:first-child > svg {
   display: none;
 }
 
@@ -33,7 +33,7 @@
   gap: 4px;
 }
 
-.arkyn_breadcrumb_link:not(:first-child) svg {
+.arkyn_breadcrumb_link:not(:first-child) > svg {
   display: unset;
   color: var(--secondary-400);
 }
