feat: finished badge documentation

--- a/packages/documentation/app/components/Fence/styles.css
+++ b/packages/documentation/app/components/Fence/styles.css
@@ -92,7 +92,7 @@ pre[class*="language-"] {
 .token.attr-value,
 .token.function,
 .token.class-name {
-  color: #e6db74;
+  color: var(--primary-600);
 }
 
 .token.keyword {
