--- a/packages/documentation/app/config/styles.css
+++ b/packages/documentation/app/config/styles.css
@@ -1,4 +1,9 @@
 :root {
+  --white: #fff;
+  --black: #000;
+}
+
+:root {
   --primary-50: #f0f9ff;
   --primary-100: #e0f2fe;
   --primary-200: #bfdbfe;
