--- a/packages/components/src/newComponents/Modal/Container/styles.css
+++ b/packages/components/src/newComponents/Modal/Container/styles.css
@@ -33,5 +33,5 @@
 .arkyn_modal_container > .content {
   z-index: 9999;
   border-radius: 6px;
-  background: var(--white);
+  background: var(--strong-background);
 }
