--- a/packages/components/src/newComponents/Modal/Footer/styles.css
+++ b/packages/components/src/newComponents/Modal/Footer/styles.css
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 16px;
   padding: 16px;
-  border-top: 1px solid var(--normal-line);
+  border-top: 1px solid var(--border);
 }
 
 .arkyn_modal_footer.left {
