--- a/packages/components/src/newComponents/Modal/Header/styles.css
+++ b/packages/components/src/newComponents/Modal/Header/styles.css
@@ -10,9 +10,9 @@
   font-weight: 600;
   line-height: 20px;
 
-  color: var(--strong-text);
+  color: var(--text-heading);
 
-  border-bottom: 1px solid var(--normal-line);
+  border-bottom: 1px solid var(--border);
 }
 
 .arkyn_modal_header > button {
@@ -26,8 +26,8 @@
   border: none;
   background: none;
 
-  color: var(--normal-text);
-  background-color: var(--strong-background);
+  color: var(--text-body);
+  background-color: var(--background);
   transition: all 0.15s ease-out;
 }
 
