--- a/packages/components/base-variables.css
+++ b/packages/components/base-variables.css
@@ -14,9 +14,9 @@ html {
   --border: #e2e8f0;
 
   /* Spotlights */
-  --spotlights-primary: #116ddc;
-  --spotlights-success: #10b981;
-  --spotlights-danger: #f43f5e;
-  --spotlights-warning: #f97316;
-  --spotlights-outline: #ffffff;
+  --spotlights-primary: 17, 109, 220; /* #116ddc */
+  --spotlights-success: 16, 185, 129; /* #10b981 */
+  --spotlights-danger: 244, 63, 94; /* #f43f5e */
+  --spotlights-warning: 249, 115, 22; /* #f97316 */
+  --spotlights-outline: 255, 255, 255; /* #ffffff */
 }
