--- a/packages/components/base-variables.css
+++ b/packages/components/base-variables.css
@@ -1,4 +1,4 @@
-html {
+:root {
   /* Background */
   --background: #f1f5f9;
   --background-foreground: #ffffff;
@@ -17,6 +17,7 @@ html {
   --spotlights-primary: 17, 109, 220; /* #116ddc */
   --spotlights-success: 16, 185, 129; /* #10b981 */
   --spotlights-danger: 244, 63, 94; /* #f43f5e */
+  --spotlights-info: 14, 165, 233; /* #0ea5e9 */
   --spotlights-warning: 249, 115, 22; /* #f97316 */
   --spotlights-outline: 255, 255, 255; /* #ffffff */
 }
