--- a/packages/components/src/newComponents/Form/FormLabel/styles.css
+++ b/packages/components/src/newComponents/Form/FormLabel/styles.css
@@ -1,5 +1,5 @@
 .arkyn_form_label {
-  color: var(--secondary-700);
+  color: var(--text-body);
   font-size: 14px;
   font-weight: 600;
   line-height: 19.07px;
@@ -11,5 +11,5 @@
   font-weight: 600;
   line-height: 16.34px;
   text-align: left;
-  color: var(--danger-600);
+  color: rgb(var(--spotlights-danger), 1);
 }
