--- a/packages/components/base-variables.css
+++ b/packages/components/base-variables.css
@@ -7,7 +7,7 @@
   --text-primary: #116ddc;
   --text-heading: #0f172a;
   --text-body: #475569;
-  --text-fraquinho: #94a3b8;
+  --text-light: #94a3b8;
   --text-link: #0ea5e9;
 
   /* Border */
