--- a/packages/components/src/newComponents/Badge/styles.css
+++ b/packages/components/src/newComponents/Badge/styles.css
@@ -14,77 +14,77 @@
 }
 
 .arkyn_badge.solid.primary {
-  background-color: rgba(var(--spotlights-primary), 1);
+  background-color: rgba(var(--spotlight-primary), 1);
 }
 
 .arkyn_badge.solid.danger {
-  background-color: rgba(var(--spotlights-danger), 1);
+  background-color: rgba(var(--spotlight-danger), 1);
 }
 
 .arkyn_badge.solid.success {
-  background-color: rgba(var(--spotlights-success), 1);
+  background-color: rgba(var(--spotlight-success), 1);
 }
 
 .arkyn_badge.solid.warning {
-  background-color: rgba(var(--spotlights-warning), 1);
+  background-color: rgba(var(--spotlight-warning), 1);
 }
 
 .arkyn_badge.solid.info {
-  background-color: rgba(var(--spotlights-info), 1);
+  background-color: rgba(var(--spotlight-info), 1);
 }
 
 .arkyn_button.outline {
-  background-color: rgba(var(--spotlights-outline), 1);
+  background-color: rgba(var(--spotlight-outline), 1);
 }
 
 .arkyn_badge.outline.primary {
-  color: rgba(var(--spotlights-primary), 1);
-  border-color: rgba(var(--spotlights-primary), 1);
+  color: rgba(var(--spotlight-primary), 1);
+  border-color: rgba(var(--spotlight-primary), 1);
 }
 
 .arkyn_badge.outline.danger {
-  color: rgba(var(--spotlights-danger), 1);
-  border-color: rgba(var(--spotlights-danger), 1);
+  color: rgba(var(--spotlight-danger), 1);
+  border-color: rgba(var(--spotlight-danger), 1);
 }
 
 .arkyn_badge.outline.success {
-  color: rgba(var(--spotlights-success), 1);
-  border-color: rgba(var(--spotlights-success), 1);
+  color: rgba(var(--spotlight-success), 1);
+  border-color: rgba(var(--spotlight-success), 1);
 }
 
 .arkyn_badge.outline.warning {
-  color: rgba(var(--spotlights-warning), 1);
-  border-color: rgba(var(--spotlights-warning), 1);
+  color: rgba(var(--spotlight-warning), 1);
+  border-color: rgba(var(--spotlight-warning), 1);
 }
 
 .arkyn_badge.outline.info {
-  color: rgba(var(--spotlights-info), 1);
-  border-color: rgba(var(--spotlights-info), 1);
+  color: rgba(var(--spotlight-info), 1);
+  border-color: rgba(var(--spotlight-info), 1);
 }
 
 .arkyn_badge.ghost.primary {
-  color: rgba(var(--spotlights-primary), 1);
-  background-color: rgba(var(--spotlights-primary), 0.2);
+  color: rgba(var(--spotlight-primary), 1);
+  background-color: rgba(var(--spotlight-primary), 0.2);
 }
 
 .arkyn_badge.ghost.danger {
-  color: rgba(var(--spotlights-danger), 1);
-  background-color: rgba(var(--spotlights-danger), 0.2);
+  color: rgba(var(--spotlight-danger), 1);
+  background-color: rgba(var(--spotlight-danger), 0.2);
 }
 
 .arkyn_badge.ghost.success {
-  color: rgba(var(--spotlights-success), 1);
-  background-color: rgba(var(--spotlights-success), 0.2);
+  color: rgba(var(--spotlight-success), 1);
+  background-color: rgba(var(--spotlight-success), 0.2);
 }
 
 .arkyn_badge.ghost.warning {
-  color: rgba(var(--spotlights-warning), 1);
-  background-color: rgba(var(--spotlights-warning), 0.2);
+  color: rgba(var(--spotlight-warning), 1);
+  background-color: rgba(var(--spotlight-warning), 0.2);
 }
 
 .arkyn_badge.ghost.info {
-  color: rgba(var(--spotlights-info), 1);
-  background-color: rgba(var(--spotlights-info), 0.2);
+  color: rgba(var(--spotlight-info), 1);
+  background-color: rgba(var(--spotlight-info), 0.2);
 }
 
 /* SIZE */
@@ -93,7 +93,7 @@
   font-size: 12px;
   line-height: 12px;
 
-  border-radius: 4px;
+  border-radius: calc(var(--rounded-inputs) * 0.6667);
   padding: 0px 16px;
   height: 24px;
 }
@@ -103,7 +103,7 @@
   font-size: 10px;
   line-height: 10px;
 
-  border-radius: 4px;
+  border-radius: calc(var(--rounded-inputs) * 0.6667);
   padding: 0px 12px;
   height: 20px;
 }
