--- a/packages/components/src/newComponents/Button/styles.css
+++ b/packages/components/src/newComponents/Button/styles.css
@@ -30,76 +30,76 @@
 }
 
 .arkyn_button.solid.primary {
-  background-color: rgba(var(--spotlights-primary), 1);
+  background-color: rgba(var(--spotlight-primary), 1);
 }
 
 .arkyn_button.solid.danger {
-  background-color: rgba(var(--spotlights-danger), 1);
+  background-color: rgba(var(--spotlight-danger), 1);
 }
 
 .arkyn_button.solid.success {
-  background-color: rgba(var(--spotlights-success), 1);
+  background-color: rgba(var(--spotlight-success), 1);
 }
 
 .arkyn_button.solid.warning {
-  background-color: rgba(var(--spotlights-warning), 1);
+  background-color: rgba(var(--spotlight-warning), 1);
 }
 
 .arkyn_button.outline {
-  background-color: rgba(var(--spotlights-outline), 1);
+  background-color: rgba(var(--spotlight-outline), 1);
   border-color: var(--border);
 }
 
 .arkyn_button.outline.primary {
-  color: rgba(var(--spotlights-primary), 1);
+  color: rgba(var(--spotlight-primary), 1);
 }
 
 .arkyn_button.outline.danger {
-  color: rgba(var(--spotlights-danger), 1);
+  color: rgba(var(--spotlight-danger), 1);
 }
 
 .arkyn_button.outline.success {
-  color: rgba(var(--spotlights-success), 1);
+  color: rgba(var(--spotlight-success), 1);
 }
 
 .arkyn_button.outline.warning {
-  color: rgba(var(--spotlights-warning), 1);
+  color: rgba(var(--spotlight-warning), 1);
 }
 
 .arkyn_button.ghost.primary {
-  color: rgba(var(--spotlights-primary), 1);
-  background-color: rgba(var(--spotlights-primary), 0.2);
+  color: rgba(var(--spotlight-primary), 1);
+  background-color: rgba(var(--spotlight-primary), 0.2);
 }
 
 .arkyn_button.ghost.danger {
-  color: rgba(var(--spotlights-danger), 1);
-  background-color: rgba(var(--spotlights-danger), 0.2);
+  color: rgba(var(--spotlight-danger), 1);
+  background-color: rgba(var(--spotlight-danger), 0.2);
 }
 
 .arkyn_button.ghost.success {
-  color: rgba(var(--spotlights-success), 1);
-  background-color: rgba(var(--spotlights-success), 0.2);
+  color: rgba(var(--spotlight-success), 1);
+  background-color: rgba(var(--spotlight-success), 0.2);
 }
 
 .arkyn_button.ghost.warning {
-  color: rgba(var(--spotlights-warning), 1);
-  background-color: rgba(var(--spotlights-warning), 0.2);
+  color: rgba(var(--spotlight-warning), 1);
+  background-color: rgba(var(--spotlight-warning), 0.2);
 }
 
 .arkyn_button.invisible.primary {
-  color: rgba(var(--spotlights-primary), 1);
+  color: rgba(var(--spotlight-primary), 1);
 }
 
 .arkyn_button.invisible.danger {
-  color: rgba(var(--spotlights-danger), 1);
+  color: rgba(var(--spotlight-danger), 1);
 }
 
 .arkyn_button.invisible.success {
-  color: rgba(var(--spotlights-success), 1);
+  color: rgba(var(--spotlight-success), 1);
 }
 
 .arkyn_button.invisible.warning {
-  color: rgba(var(--spotlights-warning), 1);
+  color: rgba(var(--spotlight-warning), 1);
 }
 
 /* SIZE */
@@ -108,7 +108,7 @@
   font-size: 14px;
   line-height: 14px;
 
-  border-radius: 6px;
+  border-radius: var(--rounded-inputs);
   padding: 0px 20px;
   height: 44px;
 }
@@ -123,7 +123,7 @@
   font-size: 14px;
   line-height: 14px;
 
-  border-radius: 6px;
+  border-radius: var(--rounded-inputs);
   gap: 16px;
   padding: 0px 16px;
   height: 40px;
@@ -139,7 +139,7 @@
   font-size: 12px;
   line-height: 12px;
 
-  border-radius: 6px;
+  border-radius: var(--rounded-inputs);
   padding: 0px 16px;
   height: 32px;
 }
@@ -154,7 +154,7 @@
   font-size: 10px;
   line-height: 10px;
 
-  border-radius: 4px;
+  border-radius: calc(var(--rounded-inputs) * 0.6667);
   padding: 0px 16px;
   height: 24px;
 }
