--- a/packages/components/src/newComponents/IconButton/styles.css
+++ b/packages/components/src/newComponents/IconButton/styles.css
@@ -7,11 +7,12 @@
   transition: 0.15s all ease-out;
 }
 
-.arkyn_icon_button:hover {
+.arkyn_button:hover {
   cursor: pointer;
+  filter: brightness(1.2);
 }
 
-.arkyn_icon_button:disabled {
+.arkyn_button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
 }
@@ -28,99 +29,99 @@
 }
 
 .arkyn_icon_button.solid.primary {
-  background-color: rgba(var(--spotlights-primary), 1);
+  background-color: rgba(var(--spotlight-primary), 1);
 }
 
 .arkyn_icon_button.solid.danger {
-  background-color: rgba(var(--spotlights-danger), 1);
+  background-color: rgba(var(--spotlight-danger), 1);
 }
 
 .arkyn_icon_button.solid.success {
-  background-color: rgba(var(--spotlights-success), 1);
+  background-color: rgba(var(--spotlight-success), 1);
 }
 
 .arkyn_icon_button.solid.warning {
-  background-color: rgba(var(--spotlights-warning), 1);
+  background-color: rgba(var(--spotlight-warning), 1);
 }
 
 .arkyn_icon_button.outline {
-  background-color: rgba(var(--spotlights-outline), 1);
+  background-color: rgba(var(--spotlight-outline), 1);
   border-color: var(--border);
 }
 
 .arkyn_icon_button.outline.primary {
-  color: rgba(var(--spotlights-primary), 1);
+  color: rgba(var(--spotlight-primary), 1);
 }
 
 .arkyn_icon_button.outline.danger {
-  color: rgba(var(--spotlights-danger), 1);
+  color: rgba(var(--spotlight-danger), 1);
 }
 
 .arkyn_icon_button.outline.success {
-  color: rgba(var(--spotlights-success), 1);
+  color: rgba(var(--spotlight-success), 1);
 }
 
 .arkyn_icon_button.outline.warning {
-  color: rgba(var(--spotlights-warning), 1);
+  color: rgba(var(--spotlight-warning), 1);
 }
 
 .arkyn_icon_button.ghost.primary {
-  color: rgba(var(--spotlights-primary), 1);
-  background-color: rgba(var(--spotlights-primary), 0.2);
+  color: rgba(var(--spotlight-primary), 1);
+  background-color: rgba(var(--spotlight-primary), 0.2);
 }
 
 .arkyn_icon_button.ghost.danger {
-  color: rgba(var(--spotlights-danger), 1);
-  background-color: rgba(var(--spotlights-danger), 0.2);
+  color: rgba(var(--spotlight-danger), 1);
+  background-color: rgba(var(--spotlight-danger), 0.2);
 }
 
 .arkyn_icon_button.ghost.success {
-  color: rgba(var(--spotlights-success), 1);
-  background-color: rgba(var(--spotlights-success), 0.2);
+  color: rgba(var(--spotlight-success), 1);
+  background-color: rgba(var(--spotlight-success), 0.2);
 }
 
 .arkyn_icon_button.ghost.warning {
-  color: rgba(var(--spotlights-warning), 1);
-  background-color: rgba(var(--spotlights-warning), 0.2);
+  color: rgba(var(--spotlight-warning), 1);
+  background-color: rgba(var(--spotlight-warning), 0.2);
 }
 
 .arkyn_icon_button.invisible.primary {
-  color: rgba(var(--spotlights-primary), 1);
+  color: rgba(var(--spotlight-primary), 1);
 }
 
 .arkyn_icon_button.invisible.danger {
-  color: rgba(var(--spotlights-danger), 1);
+  color: rgba(var(--spotlight-danger), 1);
 }
 
 .arkyn_icon_button.invisible.success {
-  color: rgba(var(--spotlights-success), 1);
+  color: rgba(var(--spotlight-success), 1);
 }
 
 .arkyn_icon_button.invisible.warning {
-  color: rgba(var(--spotlights-warning), 1);
+  color: rgba(var(--spotlight-warning), 1);
 }
 
 /* SIZE */
 .arkyn_icon_button.lg {
-  border-radius: 6px;
+  border-radius: var(--rounded-inputs);
   height: 44px;
   width: 44px;
 }
 
 .arkyn_icon_button.md {
-  border-radius: 6px;
+  border-radius: var(--rounded-inputs);
   height: 40px;
   width: 40px;
 }
 
 .arkyn_icon_button.sm {
-  border-radius: 6px;
+  border-radius: var(--rounded-inputs);
   height: 32px;
   width: 32px;
 }
 
 .arkyn_icon_button.xs {
-  border-radius: 4px;
+  border-radius: calc(var(--rounded-inputs) * 0.6667);
   height: 24px;
   width: 24px;
 }
