fix: correct tooltip styles

--- a/packages/components/src/newComponents/Tooltip/styles.css
+++ b/packages/components/src/newComponents/Tooltip/styles.css
@@ -19,8 +19,8 @@
   justify-content: center;
 
   font-weight: 400;
-  color: var(--secondary-100);
-  background-color: var(--secondary-900);
+  color: var(--tooltip-text);
+  background-color: var(--tooltip-background);
 
   z-index: 9999;
 }
@@ -52,7 +52,7 @@
   content: "";
   top: 100%;
   border-style: solid;
-  border-color: var(--secondary-900) transparent;
+  border-color: var(--tooltip-background) transparent;
   border-width: 6px 6px 0 6px;
   bottom: 20px;
   position: absolute;
@@ -70,7 +70,7 @@
   content: "";
   top: 50%;
   border-style: solid;
-  border-color: transparent var(--secondary-900);
+  border-color: transparent var(--tooltip-background);
   border-width: 6px 0 6px 6px;
   left: 100%;
   position: absolute;
@@ -86,7 +86,7 @@
 .arkyn_tooltip.right .arkyn_tooltip_text::before {
   content: "";
   border-style: solid;
-  border-color: transparent var(--secondary-900);
+  border-color: transparent var(--tooltip-background);
   border-width: 6px 6px 6px 0;
   top: 50%;
   left: 0;
@@ -103,7 +103,7 @@
 .arkyn_tooltip.bottom .arkyn_tooltip_text::before {
   content: "";
   border-style: solid;
-  border-color: var(--secondary-900) transparent;
+  border-color: var(--tooltip-background) transparent;
   border-width: 0 6px 6px 6px;
   top: 0;
   left: 50%;
