--- a/packages/components/src/newComponents/Drawer/Container/styles.css
+++ b/packages/components/src/newComponents/Drawer/Container/styles.css
@@ -5,14 +5,7 @@
   right: 0;
   bottom: 0;
 
-  display: flex;
-  align-items: start;
-  justify-content: center;
-
-  padding: 10vh 0;
-  padding-bottom: 2rem;
   overflow: auto;
-
   z-index: 9999;
 }
 
@@ -32,6 +25,10 @@
 
 .arkyn_drawer_container > .content {
   z-index: 9999;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: max-content;
   background: var(--card);
 }
 
