--- a/packages/components/src/newComponents/Modal/Header/styles.css
+++ b/packages/components/src/newComponents/Modal/Header/styles.css
@@ -1,7 +1,6 @@
 .arkyn_modal_header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
 
   height: 56px;
   padding: 16px;
@@ -15,7 +14,7 @@
   border-bottom: 1px solid var(--border);
 }
 
-.arkyn_modal_header > button {
+.arkyn_modal_header:close_button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,7 +32,7 @@
   transition: all 0.15s ease-out;
 }
 
-.arkyn_modal_header > button:hover {
+.arkyn_modal_header:close_button:hover {
   cursor: pointer;
   filter: brightness(0.9);
 }
