--- a/packages/components/src/newComponents/Drawer/Header/styles.css
+++ b/packages/components/src/newComponents/Drawer/Header/styles.css
@@ -14,7 +14,7 @@
   border-bottom: 1px solid var(--border);
 }
 
-.arkyn_drawer_header:close_button {
+.arkyn_drawer_header-close_button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,7 +32,7 @@
   transition: all 0.15s ease-out;
 }
 
-.arkyn_drawer_header:close_button:hover {
+.arkyn_drawer_header-close_button:hover {
   cursor: pointer;
   filter: brightness(0.9);
 }
