--- a/packages/components/src/newComponents/IconButton/styles.css
+++ b/packages/components/src/newComponents/IconButton/styles.css
@@ -17,7 +17,7 @@
   opacity: 0.5;
 }
 
-.arkyn_icon_button:content {
+.arkyn_icon_button-content {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -127,7 +127,7 @@
 }
 
 /* SPIN */
-.arkyn_icon_button:spinner {
+.arkyn_icon_button-spinner {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -139,15 +139,15 @@
   opacity: 0;
 }
 
-.arkyn_icon_button:spinner > svg {
+.arkyn_icon_button-spinner > svg {
   animation: spin 2s linear infinite;
 }
 
-.arkyn_icon_button.loading_true .arkyn_icon_button:spinner {
+.arkyn_icon_button.loading_true .arkyn_icon_button-spinner {
   opacity: 1;
 }
 
-.arkyn_icon_button.loading_true .arkyn_icon_button:content {
+.arkyn_icon_button.loading_true .arkyn_icon_button-content {
   opacity: 0;
 }
 
